--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,14 @@ dependencies {
 
     implementation group: 'org.apache.xmlgraphics', name: 'batik-transcoder', version: '1.13'
 
-    //implementation fileTree(dir: 'library/fop-2.5', include: ['*.jar'])
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+
+    implementation fileTree(dir: 'library/fop-2.5', include: ['*.jar'])
 
     //Change version to 2.3 or download a local version of fop (JAI core is not present)
     // Uncomment above or change version for this to work!
 
-    implementation group: 'org.apache.xmlgraphics', name: 'fop', version: '2.5'
+   // implementation group: 'org.apache.xmlgraphics', name: 'fop', version: '2.5'
 
 
 
