--- a/pom.xml
+++ b/pom.xml
@@ -23,20 +23,26 @@
     <dependency>
       <groupId>org.scilab.forge</groupId>
       <artifactId>jlatexmath</artifactId>
-      <version>1.0.7</version>
-      <scope>runtime</scope>
+        <version>1.0.7</version>
+        <scope>runtime</scope>
     </dependency>
-    <dependency>
-      <groupId>org.apache.xmlgraphics</groupId>
-      <artifactId>batik-transcoder</artifactId>
-      <version>1.13</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.xmlgraphics</groupId>
-      <artifactId>fop</artifactId>
-      <version>2.5</version>
-      <scope>runtime</scope>
-    </dependency>
+      <dependency>
+          <groupId>org.apache.xmlgraphics</groupId>
+          <artifactId>batik-transcoder</artifactId>
+          <version>1.13</version>
+          <scope>runtime</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-math3</artifactId>
+          <version>3.6.1</version>
+          <scope>runtime</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.xmlgraphics</groupId>
+          <artifactId>fop</artifactId>
+          <version>2.5</version>
+          <scope>runtime</scope>
+      </dependency>
   </dependencies>
 </project>
